--- a/1/Ex_1.ipynb
+++ b/1/Ex_1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -54,7 +54,7 @@
       "text/plain": "       0      1      2\n0  0.142 -0.030  0.077\n1 -0.030  0.160 -0.034\n2  0.077 -0.034  0.235",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.142</td>\n      <td>-0.030</td>\n      <td>0.077</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-0.030</td>\n      <td>0.160</td>\n      <td>-0.034</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.077</td>\n      <td>-0.034</td>\n      <td>0.235</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
     "\n",
     "\n",
     "# читаем матрицу\n",
-    "filename = 'matrix_try.txt'\n",
+    "filename = '/home/tatyana/PycharmProjects/Computationals_2/matrix_try.txt'\n",
     "a, b = rd.read_matrix(filename)\n",
     "\n",
     "# находим обратную матрицу\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
