5th task is done

--- a/2/Ex_2.ipynb
+++ b/2/Ex_2.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -346,13 +346,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Решение методом Зейделя:  [0.09999524 0.5000011  0.99999801]\n",
+      "Решение методом верхней релаксации:  [0.09999524 0.5000011  0.99999801]\n",
       "Число итераций 6\n",
       "Фактическая погрешность:  [4.76073963e-06 1.10347158e-06 1.98888296e-06]\n"
      ]
@@ -371,7 +371,7 @@
     "    part_val = H_R.dot(x_k) - x_k + g_D\n",
     "    x_k_1 = part_val_1.dot(x_k + q*part_val)\n",
     "    k += 1\n",
-    "print(\"Решение методом Зейделя: \", x_k_1)\n",
+    "print(\"Решение методом верхней релаксации: \", x_k_1)\n",
     "print(\"Число итераций\", k)\n",
     "print(\"Фактическая погрешность: \", np.abs(x_k_1 - x))"
    ],
